--- a/src/App.css
+++ b/src/App.css
@@ -63,8 +63,7 @@ body {
 .loading {
   background-color: var(--accent-color);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: center;
   margin: 2rem 0px;
   padding: 2rem;
 }
